[tool.poetry]
name = "stream_danmu_tool"
version = "0.1.0"
description = ""
authors = ["a16su <33782391+a16su@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.10.2"
httpx = "^0.23.1"
websocket-client = "^1.4.2"
brotli = "^1.0.9"


[tool.poetry.group.linter.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
